--- a/src/css/themes/simple.css
+++ b/src/css/themes/simple.css
@@ -93,9 +93,4 @@
       }
     }
   }
-
-  .app-header__secondary-nav {
-    background: oklch(95% 0 0);
-    border-bottom: 3px solid oklch(0% 0 0);
-  }
 }
